--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
 	"dependencies": {
 		"bcryptjs": "^2.4.3",
 		"colors": "^1.4.0",
+		"compression": "^1.7.4",
 		"cookie-parser": "^1.4.6",
 		"cors": "^2.8.5",
 		"dotenv": "^16.3.1",
 		"express": "^4.18.2",
 		"express-rate-limit": "^6.7.1",
+		"helmet": "^7.0.0",
 		"jsonwebtoken": "^9.0.1",
 		"mongoose": "^7.3.2",
 		"mongoose-slug-generator": "^1.0.4",
